[tool.poetry]
name = "dyncache"
version = "0.1.2"
description = "Dynamic input-output caching for deterministic functions"
license = "MIT"
authors = ["Niko Järvinen <nbjarvinen@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/b10011/dyncache"
repository = "https://github.com/b10011/dyncache"
documentation = "https://dyncache.readthedocs.io/en/latest/"
keywords = ["function" ,"cache", "dataset", "ai", "machine learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]
packages = [
  { include = "dyncache" }
]

[tool.poetry.dependencies]
python = "^3.5"
cloudpickle = ">=1.3.0"
click = ">=7.1.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
sphinx = ">=3.0.1"
sphinx_rtd_theme = ">=0.4.3"
pytest-cov = ">=2.8.1"
tox = ">=3.14.6"
importlib_metadata = ">=1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
